{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 29,
  "lineage": "3df2738a-3acd-a15b-6c1b-b240294346f8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-080c20d314b5ed4e0",
            "arn": "arn:aws:ec2:us-east-1:272117124528:elastic-ip/eipalloc-080c20d314b5ed4e0",
            "association_id": "eipassoc-0087fdee4024651a4",
            "domain": "vpc",
            "id": "eipalloc-080c20d314b5ed4e0",
            "instance": "i-02039a2860ee6d0f9",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ba0358b831037f0c",
            "private_dns": "ip-10-20-1-172.ec2.internal",
            "private_ip": "10.20.1.172",
            "public_dns": "ec2-54-209-93-158.compute-1.amazonaws.com",
            "public_ip": "54.209.93.158",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "bookverse-backend-eip"
            },
            "tags_all": {
              "Component": "backend",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "bookverse-backend-eip",
              "Project": "bookverse"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_db_instance.postgres",
            "aws_db_parameter_group.postgres",
            "aws_db_subnet_group.main",
            "aws_iam_instance_profile.backend_profile",
            "aws_iam_role.backend_role",
            "aws_iam_role.rds_monitoring",
            "aws_instance.backend",
            "aws_internet_gateway.igw",
            "aws_security_group.backend",
            "aws_security_group.rds",
            "aws_subnet.private_1",
            "aws_subnet.private_2",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0254b2d5c4c472488",
            "arn": "arn:aws:ec2:us-east-1:272117124528:instance/i-02039a2860ee6d0f9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "bookverse-backend-profile",
            "id": "i-02039a2860ee6d0f9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "bookverse-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ba0358b831037f0c",
            "private_dns": "ip-10-20-1-172.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.1.172",
            "public_dns": "ec2-54-209-93-158.compute-1.amazonaws.com",
            "public_ip": "54.209.93.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:272117124528:key/e6456060-3d82-4803-b19c-aea16478a661",
                "tags_all": {
                  "Component": "backend",
                  "Environment": "dev",
                  "ManagedBy": "Terraform",
                  "Project": "bookverse"
                },
                "throughput": 125,
                "volume_id": "vol-06012b20631baaace",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07c97747de039a159",
            "tags": {
              "Name": "bookverse-backend",
              "Type": "backend"
            },
            "tags_all": {
              "Component": "backend",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "bookverse-backend",
              "Project": "bookverse",
              "Type": "backend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c34827ed267bd503"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_db_instance.postgres",
            "aws_db_parameter_group.postgres",
            "aws_db_subnet_group.main",
            "aws_iam_instance_profile.backend_profile",
            "aws_iam_role.backend_role",
            "aws_iam_role.rds_monitoring",
            "aws_security_group.backend",
            "aws_security_group.rds",
            "aws_subnet.private_1",
            "aws_subnet.private_2",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:272117124528:internet-gateway/igw-06adee41b29111394",
            "id": "igw-06adee41b29111394",
            "owner_id": "272117124528",
            "tags": {
              "Name": "bookverse-igw"
            },
            "tags_all": {
              "Component": "backend",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "bookverse-igw",
              "Project": "bookverse"
            },
            "vpc_id": "vpc-0b417531f16b05d9e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:272117124528:route-table/rtb-06e652d41e6302312",
            "id": "rtb-06e652d41e6302312",
            "owner_id": "272117124528",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06adee41b29111394",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bookverse-public-rt"
            },
            "tags_all": {
              "Component": "backend",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "bookverse-public-rt",
              "Project": "bookverse"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b417531f16b05d9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034a34ae3f0e7cb40",
            "route_table_id": "rtb-06e652d41e6302312",
            "subnet_id": "subnet-07c97747de039a159"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5c2aa68a0a8323b",
            "route_table_id": "rtb-06e652d41e6302312",
            "subnet_id": "subnet-06ea44b3f3cfa80fd"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:272117124528:security-group/sg-0c34827ed267bd503",
            "description": "Backend SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c34827ed267bd503",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              }
            ],
            "name": "bookverse-backend-sg",
            "name_prefix": "",
            "owner_id": "272117124528",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bookverse-backend-sg"
            },
            "tags_all": {
              "Component": "backend",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "bookverse-backend-sg",
              "Project": "bookverse"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b417531f16b05d9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:272117124528:security-group/sg-0369a5c704aa19283",
            "description": "RDS SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0369a5c704aa19283",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c34827ed267bd503"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "bookverse-rds-sg",
            "name_prefix": "",
            "owner_id": "272117124528",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bookverse-rds-sg"
            },
            "tags_all": {
              "Component": "backend",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "bookverse-rds-sg",
              "Project": "bookverse"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b417531f16b05d9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.backend",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:272117124528:subnet/subnet-0f015664545449c33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f015664545449c33",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "272117124528",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bookverse-private-1",
              "Type": "private"
            },
            "tags_all": {
              "Component": "backend",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "bookverse-private-1",
              "Project": "bookverse",
              "Type": "private"
            },
            "vpc_id": "vpc-0b417531f16b05d9e"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:272117124528:subnet/subnet-055b95bfc1f0d0e6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055b95bfc1f0d0e6d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "272117124528",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bookverse-private-2",
              "Type": "private"
            },
            "tags_all": {
              "Component": "backend",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "bookverse-private-2",
              "Project": "bookverse",
              "Type": "private"
            },
            "vpc_id": "vpc-0b417531f16b05d9e"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:272117124528:subnet/subnet-07c97747de039a159",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c97747de039a159",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "272117124528",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bookverse-public-1",
              "Type": "public"
            },
            "tags_all": {
              "Component": "backend",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "bookverse-public-1",
              "Project": "bookverse",
              "Type": "public"
            },
            "vpc_id": "vpc-0b417531f16b05d9e"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:272117124528:subnet/subnet-06ea44b3f3cfa80fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ea44b3f3cfa80fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "272117124528",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bookverse-public-2",
              "Type": "public"
            },
            "tags_all": {
              "Component": "backend",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "bookverse-public-2",
              "Project": "bookverse",
              "Type": "public"
            },
            "vpc_id": "vpc-0b417531f16b05d9e"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:272117124528:vpc/vpc-0b417531f16b05d9e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0872f89ed46704cc8",
            "default_route_table_id": "rtb-0d53956221561bce6",
            "default_security_group_id": "sg-09b29e4d4e1101e51",
            "dhcp_options_id": "dopt-0df88ebc554147ca2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b417531f16b05d9e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d53956221561bce6",
            "owner_id": "272117124528",
            "tags": {
              "Name": "bookverse-vpc"
            },
            "tags_all": {
              "Component": "backend",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "bookverse-vpc",
              "Project": "bookverse"
            }
          }
        }
      ]
    }
  ]
}